Modify CMBS connection status display Add HAN connected device

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,9 +3,11 @@
 
     <string name="app_name">DSPG ULE Demo</string>
     <string name="action_settings">Settings</string>
-    <string name="cmbs_status_heading">CMBS Status:</string>
-    <string name="connected">Connected</string>
-    <string name="disconnected">Disconnected</string>
+    <string name="cmbs_connected_heading">CMBS Connected :</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
     <string name="dspg_logo">DSPG Logo</string>
+    <string name="han_connected_device_heading">HAN Connected Device :</string>
+    <string name="not_available">N/A</string>
 
 </resources>
