--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">DSPG ULE Demo</string>
-    <string name="action_settings">Settings</string>
+    <string name="menu_about">About</string>
     <string name="cmbs_connected_heading">CMBS Connected :</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
